setting up serverCtrl

--- a/public/views/landing/landing.html
+++ b/public/views/landing/landing.html
@@ -1,4 +1,5 @@
 <body ng-controller="landingCtrl">
   landing
   <button type="button" name="button" ui-sref="login">login</button>
+  <button type="button" name="button" ui-sref="signUp">Sign Up</button>
 </body>
