--- a/public/views/profile/profile.html
+++ b/public/views/profile/profile.html
@@ -1,4 +1,6 @@
 <body ng-controller="profileCtrl">
   profile
-  <div ui-view=""></div>
+  <button type="button" name="button">Purchase Tokens</button>
+  <button type="button" name="button" ng-click="logout()">Log out</button>
+  <div ui-view="profileContents"></div>
 </body>
