logs search result

--- a/public/views/landing/landing.html
+++ b/public/views/landing/landing.html
@@ -2,6 +2,6 @@
   landing
   <button type="button" name="button" ui-sref="login">login</button>
   <button type="button" name="button" ui-sref="signUp">Sign Up</button>
-  <input type="text" name="name" value="" placeholder="Search for jobs..." ng-model="searchText" ng-keyup="getSearchResults($event, searchText)">
-  <button type="button" name="button" ng-click="getSearchResults(searchText)">Search</button>
+  <input type="text" name="name" value="" placeholder="Search for jobs..." ng-model="searchText" ng-keyup="getSearchResultsByKey($event, searchText)">
+  <button type="button" name="button" ng-click="getSearchResultsByClick(searchText)">Search</button>
 </body>
