--- a/public/views/profile/profile.html
+++ b/public/views/profile/profile.html
@@ -3,4 +3,10 @@
   <button type="button" name="button" ui-sref="profile.purchaseTokens">Purchase Tokens</button>
   <button type="button" name="button" ng-click="logout()">Log out</button>
   <div ui-view="profile"></div>
+
+  <section>
+    new job?
+    <button type="button" name="button" ui-sref="employerSide">Looking to hire?</button>
+    <button type="button" name="button" ui-sref="employeeSide">Looking for work?</button>
+  </section>
 </body>
