auto load postings needs work

--- a/public/views/employeeSide/employeeSide.html
+++ b/public/views/employeeSide/employeeSide.html
@@ -4,7 +4,7 @@
 
   <input type="text" name="name" value="" placeholder="Job Title" ng-model='title'>
   <textarea name="name" rows="4" cols="40" placeholder="Quick Job Description" ng-model="description"></textarea>
-  <input type="text" name="name" value="" placeholder="Starting Bid (Round to nearest whole dollar)" ng-model="startingBid">
+  <input type="text" name="name" value="" placeholder="Starting Bid" ng-model="startingBid">
   <input type="text" name="name" value="" placeholder="Job Keywords" ng-model="keywords">
   <input type="text" name="name" value="" placeholder="Number of Hours Job Will Stay Posted" ng-model="hours">
   <button type="button" name="button" ng-click="createJob(title, description, startingBid, keywords, hours)">Post Job</button>
