--- a/public/views/profile/profile.html
+++ b/public/views/profile/profile.html
@@ -9,7 +9,7 @@
     <button type="button" name="button" ui-sref="employerSide">Looking to hire?</button>
     <button type="button" name="button" ui-sref="employeeSide">Looking for work?</button>
   </section>
-  <section ng-repeat="myPost in myPostings">
-    {{myPost}}
+  <section ng-repeat="post in postings">
+    {{post}}
   </section>
 </body>
