--- a/public/views/profile/profile.html
+++ b/public/views/profile/profile.html
@@ -9,7 +9,13 @@
     <button type="button" name="button" ui-sref="employerSide">Looking to hire?</button>
     <button type="button" name="button" ui-sref="employeeSide">Looking for work?</button>
   </section>
-  <section ng-repeat="post in postings">
-    {{post}}
+  <section>
+    <div class="myPostings" ng-repeat="post in postings">
+      Title: {{post.title}} <br>
+      Description: {{post.description}} <br>
+      Key Words: {{post.key_words}} <br>
+      Starting Bid: {{post.starting_bid}} <br>
+      {{post.hours}}
+    </div>
   </section>
 </body>
