--- a/public/views/profile/profile.html
+++ b/public/views/profile/profile.html
@@ -9,6 +9,7 @@
     <button type="button" name="button" ui-sref="employerSide">Looking to hire?</button>
     <button type="button" name="button" ui-sref="employeeSide">Looking for work?</button>
   </section>
+  <edit-modal ng-show="editModal"></edit-modal>
   <section>
     <div class="myPostings" ng-repeat="post in postings" ng-click="edit(post.id)">
       Title: {{post.title}} <br>
