modal is working and showing correct data

--- a/public/partials/editModal/editModal.html
+++ b/public/partials/editModal/editModal.html
@@ -1,3 +1,9 @@
-<div class="modal">
-  Hey
+<div class="window" ng-click="close()">
+  <div class="modal">
+    Title: {{editPost.title}} <br>
+    Description: {{editPost.description}} <br>
+    Key Words: {{editPost.key_words}} <br>
+    Starting Bid: {{editPost.starting_bid}} <br>
+    {{editPost.hours}}
+  </div>
 </div>
