--- a/public/partials/editModal/editModal.css
+++ b/public/partials/editModal/editModal.css
@@ -3,7 +3,6 @@
   height: 90vh;
   z-index: 100;
   background: lightblue;
-  /*opacity: .5;*/
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,5 +14,8 @@
   height: 50vh;
   z-index: 101;
   background: white;
-  /*opacity: 1;*/
+  position: absolute;
+  display: flex;
+  left: 25vw;
+  top: 25vh;
 }
